Resolve small logo issue and addnowrap on menu-items

--- a/themes/orbitor-hugo/assets/scss/templates/_navigation.scss
+++ b/themes/orbitor-hugo/assets/scss/templates/_navigation.scss
@@ -17,6 +17,7 @@
 #navbar{
   box-shadow: 0 1px 2px rgba(0,0,0,.05);
   background: $light;
+  white-space: nowrap;
 
  .nav-link{
     padding-left: 26px;
